--- a/pencegahan.html
+++ b/pencegahan.html
@@ -54,9 +54,9 @@
        <li>5. Membatasi mobilisasi dan interaksi.</li>
       </ul>
      </div> 
-     <video width= "100%" controls>
-            <source src="../img/5M.mp4">
-          </video>
+     <center><video width= "75%" controls>
+<source src="./img/5m.MP4">
+</video></center>
 </section>
 
 <!-- footer -->
